--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
 body {
     background-color: #ffffff;
     min-width: 80%;
-    min-height: 90%;
-    max-width: 90%;
-    max-height: 100%;
+    min-height: 80%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 span {
@@ -21,9 +19,9 @@ input{
 }
 .img-crop{
     min-width: 80%;
-    min-height: 90%;
-    max-width: 90%;
-    max-height: 100%;
+    min-height: 85%;
+    max-width: 80%;
+    max-height: 95%;
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -500px;
@@ -44,11 +42,18 @@ input{
     width: 90rem;
     z-index: 1;
 }
+.imgs-container{
+    /*grid-template-columns: 25% 25% 25% 25%;
+    grid-row: 1;
+    justify-items: stretch;*/
 
+}
 .apple-logo{
     color: #ffffff;
     width: 7rem;
 }
-.apple-logo:onCliCK{
-    color: #ffffff;
+.img-grid {
+    max-width: 361px;
+    margin: -40px 0 0 -5px;
+    height: 180px;
 }
