--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
 *{
     text-decoration: none;
-    width: 100%;
+    max-width: 1440px
 }
 body {
     background-color: #ffffff;
-    min-width: 80%;
-    min-height: 80%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    max-width: 1440px;
+    max-height: 1280px;
 }
 span {
     min-width: 250vw;
     align-items: center;
 }
 input{
-    max-width: 100%;
-    height: .88rem;
-    padding: 0em;
+    align-items: center;
+    background: linear-gradient(0deg, rgba(120, 120, 120, 1) 0%, rgba(5, 5, 5, .07) 50%, rgba(110, 110, 110, 1) 51%, rgba(120, 120, 120, 1) 100%);
+    border-radius: 0 5px 5px 0;
+    display: flex;
+    padding: 0 10px 0 10px;
+    width: auto;
 }
 li {
     display: inline;
@@ -30,13 +33,8 @@ footer{
     height: 90px;
 }
 .img-crop{
-    min-width: 80%;
-    min-height: 90%;
-    max-width: 80%;
-    max-height: 100%;
-    margin-top: -10px;
-    margin-left: -10px;
-    margin-right: -500px;
+    max-width: 2000px;
+    max-height: 1280px;
 }
 .main-nav{
     align-content: center;
@@ -46,27 +44,37 @@ footer{
     display: grid;
     grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% !important;
     font-size: 12px;
-    max-width: 60%;
-    margin-left: 16%;
     margin-top: 1rem;
+    margin-left: 12%;
     height: 1.8rem;
     position: relative;
-    width: 90rem;
+    width: 1180px;
     z-index: 1;
+    background: linear-gradient(0deg, rgba(120, 120, 120, 1) 0%, rgba(95, 95, 95, 1) 50%, rgba(110, 110, 110, 1) 51%, rgba(120, 120, 120, 1) 100%);
+    border: 1px solid #757575;
 }
-.imgs-container{
-    /*grid-template-columns: 25% 25% 25% 25%;
-    grid-row: 1;
-    justify-items: stretch;*/
-
+.main-nav a{
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    font-size: 14px;
+    height: 36px;
+    text-shadow: 0 0.6px rgba(0, 0, 0, 0.6), 0 -0.6px rgba(0, 0, 0, 0.9);
+    padding-top: 3px;
+    width: 106px;
+}
+.main-nav:hover {
+    background: linear-gradient(0deg, rgb(31, 30, 30) 0%, rgba(39, 39, 39,0.9) 50%, rgba(75, 75, 75, 1) 51%, rgba(95, 95, 95, 1) 100%);
+    
 }
 .apple-logo{
     color: #ffffff;
     width: 7rem;
 }
 .img-grid {
-    max-width: 361px;
-    margin: -45px 0 0 -5px;
+    max-width: 400px;
+    margin: -45px 0 0 0;
     height: 180px;
 }
 .footer-cont{
