added effects in the navbar (hover and the active) linked all the anchors started to review and fix semantic errors in html

--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 *{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
     text-decoration: none;
-    
 }
 body{
     min-width: 1440px;
 }
 .searching {
+    width: auto;
     border-radius: 3px;
     background: linear-gradient(0deg, rgba(120, 120, 120, 1) 0%, rgba(95, 95, 95, 1) 50%, rgba(110, 110, 110, 1) 51%, rgba(120, 120, 120, 1) 100%);
     outline: none;
     border: none;
     border-radius: 1px;
-    width: 130px;
     height: 28.8px;
     align-self: center;
     padding: 0 13px 0 13px;
@@ -23,23 +22,21 @@ body{
     border: none;
     border-radius: 30px;
     box-shadow: 0 1px #808080, 0 -1px #363636;
-    width: 120px;
+    width: 110px;
     height: 18px;
     font-size: 14px;
-    margin-top: 6px;
+    margin-top: 4px;
     outline: none;
     transition: width 0.7s;
 }
  input:focus{
     background: url("/resources/search-onclick.png") no-repeat 1%, white;
     width: 150px;
-
 }
 .searching:focus{
     resize: horizontal;
     width: 300px;
 }
-
 li {
     list-style-type: none;
 }
@@ -49,7 +46,6 @@ footer{
     height: 90px;
     margin-left: 13%;
 }
-
 .main-div{
     background: url("/resources/hero.jpg") no-repeat;
     align-self: center;
@@ -71,6 +67,7 @@ nav {
     width: 980px;
 }
 nav a{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     float: left;
     border-radius: 1px;
     display: inline-grid;
@@ -78,7 +75,7 @@ nav a{
     height: 1.8rem;
     width: 130px;
     background: linear-gradient(0deg, rgba(120, 120, 120, 1) 0%, rgba(95, 95, 95, 1) 50%, rgba(110, 110, 110, 1) 51%, rgba(120, 120, 120, 1) 100%);
-    border-right: 1.5px solid rgba(0, 0, 0, 0.5);
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
     color: white;
     text-align: center;
     text-shadow: 0 0.6px rgba(0, 0, 0, 0.6), 0 -0.6px rgba(0, 0, 0, 0.9);
@@ -86,43 +83,81 @@ nav a{
     line-height: 30px;
     font-size: 14px;
 }
-
+h2{
+    font-size: 65px;
+    font-weight: 100;
+    position: relative;
+    right: 670px;
+    top: 100px;
+}
 nav a:hover {
     background: linear-gradient(0deg, rgb(31, 30, 30) 0%, rgba(39, 39, 39,0.9) 50%, rgba(75, 75, 75, 1) 51%, rgba(95, 95, 95, 1) 100%);   
+}
+nav a:active{
+    background: linear-gradient(45deg, rgb(31, 30, 30) 0%, rgba(39, 39, 39,0.7) 50%, rgba(75, 75, 75, 1) 51%, rgba(95, 95, 95, 1) 100%);   
+    transform: translateY(0.5px);
 }
 .text{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    color: #FFFFFF;
+}
+h3{
+    font-weight: 200;
+    text-align: center;
+    font-size: 28px;
+    color: #FFFFFF;
+    font-weight: 400;
+    line-height: 1.2;
+    position: relative;
+    right: 700px;
+    top: 40px;
+    padding-bottom: -40px;
+}
+h4{
+    text-align: center;
+    color: #FFFFFF;
+    font-weight: 100;
+    font-size: 24px;
+    position: relative;
+    right: 1000px;
+    width: 780px;
+}
+h4:hover{
+    text-decoration: underline;
 }
 .title{
     color: #FFFFFF;
     font-weight: 100;
 }
-
+.play-icon{
+    position: relative;
+    top: 30px;
+    left: 300px;
+}
 .imgs-container{
    width: auto;
-   height: 198px;
-    
+   height: 198px; 
 }
 .img-grid{
   width: 359px;
   margin-left: -5px;
 }
-
 ul{
+    font-size: 12px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     list-style-type: none;
     display: flex;
     align-items: center;
     position: relative;
-    bottom: 22px;
+    bottom: 35px;
     left: 480px;
     margin-left: 50px;
-    letter-spacing: 0.5px;
 }
 .footer-cont{
     margin-top: 30px;
+    font-size: 12px;
 }
 .foo-pp{
-    margin-top: -60px;
+    margin-top: -20px;
 }
